--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-.project
-.yeogiyo-shop/target
-.yeogiyo-shop/.settings
+/.project
+/.yeogiyo-shop/target
+/.yeogiyo-shop/.settings
+/.classpath
+/.factorypath
+/.project
