--- a/yeogiyo-shop/pom.xml
+++ b/yeogiyo-shop/pom.xml
@@ -20,6 +20,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+<!--     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>4.2.2.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.2.2.RELEASE</version>
+    </dependency>-->
   </dependencies>
   <build>
     <finalName>yeogiyo-shop</finalName>
