--- a/yeogiyo-order/src/main/resources/application.yml
+++ b/yeogiyo-order/src/main/resources/application.yml
@@ -7,10 +7,6 @@ spring:
       enabled: true
       path: /h2-console
 
-  profiles:
-    active:
-    - default
-   
   datasource:
     url: jdbc:h2:mem:order
     driverClassName: org.h2.Driver
@@ -21,3 +17,12 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        sql_comments: true
+
+logging:
+  level: 
+    org.hibernate.type: trace
