--- a/yeogiyo-shop/pom.xml
+++ b/yeogiyo-shop/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.sk.yeogiyo</groupId>
+    <groupId>com.sk.sample</groupId>
     <artifactId>yeogiyo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -20,16 +20,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-<!--     <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-web</artifactId>
-      <version>4.2.2.RELEASE</version>
-    </dependency>
     <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-config</artifactId>
-      <version>4.2.2.RELEASE</version>
-    </dependency>-->
+        <groupId>com.google.zxing</groupId>
+        <artifactId>javase</artifactId>
+        <version>3.4.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>yeogiyo-shop</finalName>
