--- a/yeogiyo-shop/pom.xml
+++ b/yeogiyo-shop/pom.xml
@@ -7,19 +7,13 @@
     <artifactId>yeogiyo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.sk.yeogiyo</groupId>
+  <groupId>com.sk.sample</groupId>
   <artifactId>yeogiyo-shop</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>yeogiyo-shop Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
         <groupId>com.google.zxing</groupId>
         <artifactId>javase</artifactId>
