--- a/yeogiyo-shop/src/main/resources/application.yml
+++ b/yeogiyo-shop/src/main/resources/application.yml
@@ -1,4 +1,14 @@
+server:
+  port: 8080  # Spring boot Server port
+
 spring:
   h2:
-   console:
-     enabled: true
+    console:
+      enabled: true  # H2 웹 콘솔을 사용하겠다는 의미
+      path: /db  # 콘솔의 경로
+
+#  datasource:
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:yeogiyoshop;AUTO_SERVER=TRUE
+#    username: yeogiyoshop
+#    password: yeogiyoshop
