--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	</properties>
 
 	<modules>
+		<module>yeogiyo-shop</module>
 		<module>yeogiyo-menu</module>
 		<module>yeogiyo-order</module>
    		<module>yeogiyo-shared</module>
