--- a/yeogiyo-menu/pom.xml
+++ b/yeogiyo-menu/pom.xml
@@ -12,11 +12,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.sk.sample</groupId>
-			<artifactId>yeogiyo-shared</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
+<!-- 	<dependencies> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.sk.sample</groupId> -->
+<!-- 			<artifactId>yeogiyo-shared</artifactId> -->
+<!-- 			<version>0.0.1-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
+<!-- 	</dependencies> -->
 </project>
