--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot.version}</version>
+				<configuration>
+                	<executable>true</executable>
+            	</configuration>
 			</plugin>
 			
 			
