--- a/yeogiyo-menu/pom.xml
+++ b/yeogiyo-menu/pom.xml
@@ -127,9 +127,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot.version}</version>
-				<configuration>
-                	<executable>true</executable>
-            	</configuration>
+            	 <configuration>
+		          <mainClass>com.sk.sample.yeogiyo.MenuApplication</mainClass>
+		        </configuration>
 			</plugin>
 			
 			
