--- a/yeogiyo-menu/pom.xml
+++ b/yeogiyo-menu/pom.xml
@@ -130,6 +130,13 @@
             	 <configuration>
 		          <mainClass>com.sk.sample.yeogiyo.MenuApplication</mainClass>
 		        </configuration>
+		        <executions>
+		          <execution>
+		            <goals>
+		              <goal>repackage</goal>
+		            </goals>
+		          </execution>
+        </executions>
 			</plugin>
 			
 			
