--- a/yeogiyo-shop/pom.xml
+++ b/yeogiyo-shop/pom.xml
@@ -25,6 +25,16 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+      <scope>provided</scope>
+    </dependency>
+  
+    <dependency>
+      <groupId>javax.servlet</groupId>
+       <artifactId>jstl</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <finalName>yeogiyo-shop</finalName>
