--- a/yeogiyo-shop/src/main/resources/application.yml
+++ b/yeogiyo-shop/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     console:
       enabled: true  # H2 웹 콘솔을 사용하겠다는 의미
       path: /db  # 콘솔의 경로
-
+  mvc:
+    view:
+      prefix: /WEB-INF/view/
+      suffix: .jsp
 #  datasource:
 #    driver-class-name: org.h2.Driver
 #    url: jdbc:h2:mem:yeogiyoshop;AUTO_SERVER=TRUE
